скорректировала: 1. new HashSet<>(Arrays.asList на Set.of 2. Arrays.asList на List.of 3. import java.util.*; на import java.util.HashMap; import java.util.List; import java.util.Map; import java.util.Set;